1.7.60 NEW: dms-find-knot has a --untie option to remove knots.

1.7.59 FIXED: mol2 importer choked on resid 0.
       IMPROVED: read and writes TER records between chains in pdb files
       NEW: System.getTable() returns None on missing table.
       FIXED: (C++) don't link against libmolfile or libpython.

1.7.58 IMPROVED: dms-tile permits multiple input files, and requires -o.

1.7.57 IMPROVED: mol2 export includes original resids.

1.7.55 FIXED: dms-thermalize with --remove-drift doesn't accelerate pseudos.
       FIXED: addTableWithSchema accepts user-supplied name.
       IMPROVED: dms-frame gets otuput format from path name.
       NEW: Use pfx instead of periodicfix in dms-frame and other places.

1.7.54 FIXED: pdb export includes insertion code.

1.7.53 FIXED: dms-tile sets nonbonded_info and cell.
       IMPROVED: dms-info shows counts of pseudos and nucleic.
       NEW: Load handles PSF files.
       NEW: ReadPDBCoordinates() function.
    
1.7.52 CentOS6 portability.

1.7.49 FIXED: mol2 export was missing residues not in the first chain.
       IMPROVED: mol2 export now includes chain name.

1.7.48 FIXED: sdf export writes bond type 4 for resonant bond.
       FIXED: clone() and append() preserve bond resonant_order.

1.7.47 IMPROVED: psfgen.Psfgen got setCoordinates.
       IMPROVED: update to molfile/1.11.16.
       FIXED: psfgen.write() to dms was writing uninitialized global cell.

1.7.43 FIXED: System.name wasn't set when loading a pdb.
       FIXED: The segid atom selection keyword was missing.
       FIXED: The web pdb access code regex was too restrictive.
       FIXED: dms-reorder atoms: reference selection applies to all atoms.
       IMPROVED: load mae files with multiple consecutive m2io_version blocks.
       IMPROVED: Better error reporting of truncated mae files.

1.7.42 FIXED: Added POPS to the lipid atom selection macro.
       FIXED: The structure analyzer recognized waters with pseudos now.