@@ -1,4 +1,6 @@
 1.7.60 NEW: dms-find-knot has a --untie option to remove knots.
+       IMPROVED: dms-find-knot has a --ignore-excluded-knots that uses
+                 the exclusion table
 
 1.7.59 FIXED: mol2 importer choked on resid 0.
        IMPROVED: read and writes TER records between chains in pdb files
